log/build_2021-11-08_11-35-08/raspimouse/stderr.log
  File "/home/ubuntu/ros2_ws/install/raspimouse/lib/python3.8/site-packages/raspimouse/motor_action_server.py", line 174
    time.sleep(2)
    ^
SyntaxError: invalid syntax

